Change admin permissions to allow execution of METRC classes and ERPConfig class

--- a/unicenta source/src/main/resources/com/openbravo/pos/templates/Role.Administrator.xml
+++ b/unicenta source/src/main/resources/com/openbravo/pos/templates/Role.Administrator.xml
@@ -158,14 +158,21 @@
     <class name="com.openbravo.pos.epm.LeavesPanel" />
     <class name="com.openbravo.pos.epm.JPanelEmployeePresence" />
     <!-- These reports will not work with Apache Derby -->  
-          <!-- <class name="/com/openbravo/reports/dailypresencereport.bs" /> -->
-          <!-- <class name="/com/openbravo/reports/dailyschedulereport.bs" /> -->
-          <!-- <class name="/com/openbravo/reports/performancereport.bs" />  -->
+    <!-- <class name="/com/openbravo/reports/dailypresencereport.bs" /> -->
+    <!-- <class name="/com/openbravo/reports/dailyschedulereport.bs" /> -->
+    <!-- <class name="/com/openbravo/reports/performancereport.bs" />  -->
     
-<!--    <class name="com.openbravo.possync.ProductsSyncCreate"/> -->
-<!--    <class name="com.openbravo.possync.OrdersSyncCreate"/> -->
-    <class name="Menu.ChangePassword"/>
     <class name="com.openbravo.pos.panels.JPanelPrinter"/>
     <class name="com.openbravo.pos.config.JPanelConfiguration"/>
+
+    <class name="com.openbravo.possync.ProductsSyncCreate"/> 
+    <class name="com.openbravo.possync.OrdersSyncCreate"/>
+    <class name="com.openbravo.possync.ERPConfig"/>
+
+    <class name="com.openbravo.metrc.PushToMETRC"/> 
+    <class name="com.openbravo.metrc.METRCConfig"/>
+    
+    <class name="Menu.ChangePassword"/>
+
 
 </permissions>
