add ! image to Change popup

--- a/unicenta source/src/main/resources/com/openbravo/pos/templates/Printer.CustomerPaid.xml
+++ b/unicenta source/src/main/resources/com/openbravo/pos/templates/Printer.CustomerPaid.xml
@@ -90,6 +90,7 @@
                 <text align ="right" length="20">${paymentline.printPaid()}</text>
             </line>
             <line>
+                <image>img.refundit</image>
                 <text align="left" length="22">Change:</text>
                 <text align ="right" length="20">${paymentline.printChange()}</text>
             </line>
