--- a/unicenta source/src/main/java/com/openbravo/pos/config/JPanelConfigVPN.form
+++ b/unicenta source/src/main/java/com/openbravo/pos/config/JPanelConfigVPN.form
@@ -195,7 +195,7 @@
               <Font name="Arial" size="12" style="0"/>
             </Property>
             <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-              <ResourceString bundle="erp_messages.properties" key="label.erporg" replaceFormat="AppLocal.getIntString(&quot;{key}&quot;)"/>
+              <ResourceString bundle="vpn_messages.properties" key="label.vpnorg" replaceFormat="AppLocal.getIntString(&quot;{key}&quot;)"/>
             </Property>
           </Properties>
         </Component>
@@ -205,7 +205,7 @@
               <Font name="Arial" size="12" style="0"/>
             </Property>
             <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-              <ResourceString bundle="erp_messages.properties" key="label.erporg" replaceFormat="AppLocal.getIntString(&quot;{key}&quot;)"/>
+              <ResourceString bundle="vpn_messages.properties" key="label.vpnorg" replaceFormat="AppLocal.getIntString(&quot;{key}&quot;)"/>
             </Property>
           </Properties>
         </Component>
@@ -217,7 +217,7 @@
           <Font name="Arial" size="12" style="0"/>
         </Property>
         <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-          <ResourceString bundle="erp_messages.properties" key="label.erpurl" replaceFormat="AppLocal.getIntString(&quot;{key}&quot;)"/>
+          <ResourceString bundle="vpn_messages.properties" key="label.vpnurl" replaceFormat="AppLocal.getIntString(&quot;{key}&quot;)"/>
         </Property>
       </Properties>
     </Component>
@@ -227,7 +227,7 @@
           <Font name="Arial" size="12" style="0"/>
         </Property>
         <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-          <ResourceString bundle="erp_messages.properties" key="label.erpid" replaceFormat="AppLocal.getIntString(&quot;{key}&quot;)"/>
+          <ResourceString bundle="vpn_messages.properties" key="label.vpnid" replaceFormat="AppLocal.getIntString(&quot;{key}&quot;)"/>
         </Property>
       </Properties>
     </Component>
@@ -237,7 +237,7 @@
           <Font name="Arial" size="12" style="0"/>
         </Property>
         <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-          <ResourceString bundle="erp_messages.properties" key="label.erporg" replaceFormat="AppLocal.getIntString(&quot;{key}&quot;)"/>
+          <ResourceString bundle="vpn_messages.properties" key="label.vpnorg" replaceFormat="AppLocal.getIntString(&quot;{key}&quot;)"/>
         </Property>
       </Properties>
     </Component>
@@ -247,7 +247,7 @@
           <Font name="Arial" size="12" style="0"/>
         </Property>
         <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-          <ResourceString bundle="erp_messages.properties" key="label.erppos" replaceFormat="AppLocal.getIntString(&quot;{key}&quot;)"/>
+          <ResourceString bundle="vpn_messages.properties" key="label.vpnpos" replaceFormat="AppLocal.getIntString(&quot;{key}&quot;)"/>
         </Property>
       </Properties>
     </Component>
@@ -257,7 +257,7 @@
           <Font name="Arial" size="12" style="0"/>
         </Property>
         <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-          <ResourceString bundle="erp_messages.properties" key="label.erpuser" replaceFormat="AppLocal.getIntString(&quot;{key}&quot;)"/>
+          <ResourceString bundle="vpn_messages.properties" key="label.vpnuser" replaceFormat="AppLocal.getIntString(&quot;{key}&quot;)"/>
         </Property>
       </Properties>
     </Component>
@@ -267,7 +267,7 @@
           <Font name="Arial" size="12" style="0"/>
         </Property>
         <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-          <ResourceString bundle="erp_messages.properties" key="label.erppassword" replaceFormat="AppLocal.getIntString(&quot;{key}&quot;)"/>
+          <ResourceString bundle="vpn_messages.properties" key="label.vpnpassword" replaceFormat="AppLocal.getIntString(&quot;{key}&quot;)"/>
         </Property>
       </Properties>
     </Component>
