--- a/unicenta source/src/main/java/com/openbravo/pos/config/JPanelConfigERP.form
+++ b/unicenta source/src/main/java/com/openbravo/pos/config/JPanelConfigERP.form
@@ -73,14 +73,14 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" attributes="0">
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="jtxtUrl" alignment="0" min="-2" pref="380" max="-2" attributes="0"/>
                       <Component id="jtxtId" min="-2" pref="180" max="-2" attributes="0"/>
                       <Component id="jTextField1" min="-2" pref="180" max="-2" attributes="0"/>
                       <Component id="jTextField2" min="-2" pref="180" max="-2" attributes="0"/>
                       <Component id="jtxtName" min="-2" pref="180" max="-2" attributes="0"/>
                       <Component id="jtxtPassword" min="-2" pref="180" max="-2" attributes="0"/>
+                      <Component id="jtxtUrl" alignment="0" min="-2" pref="371" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace max="32767" attributes="0"/>
+                  <EmptySpace pref="21" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
