--- a/WombatPOS/src/main/resources/com/openbravo/pos/templates/Ticket.Close.xml
+++ b/WombatPOS/src/main/resources/com/openbravo/pos/templates/Ticket.Close.xml
@@ -25,7 +25,7 @@ import javax.swing.plaf.FontUIResource;
 import com.openbravo.pos.payment.PaymentInfo;
 import javax.swing.JOptionPane;
 import javax.swing.JDialog;
-import uk.co.pos_apps.PosApps;
+//import uk.co.pos_apps.PosApps;
 import java.awt.Window;
 
 
@@ -40,19 +40,33 @@ for (int i=0 ; i < allWindows.length; i++){
              }
 }
  
-PosApps posApps = new PosApps();
+//PosApps posApps = new PosApps();
  
-posApps.init(ticket,dbURL,dbUser,dbPassword,rootWindow,"Email");
+//posApps.init(ticket,dbURL,dbUser,dbPassword,rootWindow,"Email");
 
 
 
 boolean isCash = false;
 String change = "";
 PaymentInfo p = ticket.payments.getFirst();
+JLabel FontText = new JLabel();
+FontText.setFont (new Font ( "Arial", Font.BOLD, 20) );
 
 if ("cash".equals(p.getName())) {
     isCash = true;
     change = p.printChange();
+}
+
+if(isCash) {
+    FontText.setText("Return: " + change); 
+    Object[] options = {"OK", "Receipt",};
+
+value = JOptionPane.showOptionDialog(null, FontText, "Change", JOptionPane.YES_NO_OPTION, 
+JOptionPane.QUESTION_MESSAGE, null, options, options);
+
+if (value == JOptionPane.NO_OPTION){
+    sales.printTicket("Printer.Ticket");
+    }
 }
 
 // Get details of the original font before we change it otherwise all dialogboxes will use new settings
@@ -64,17 +78,17 @@ message = "Change: " + change;
  JLabel FontText = new JLabel(message);
  FontText.setFont (new Font ( "Arial", Font.BOLD, 36) );
 
-if(isCash) {
-     JOptionPane pane = new JOptionPane();
-     pane.setMessage(FontText);
-     pane.setPreferredSize( new Dimension(450,150));
-     JDialog dialog = pane.createDialog("Cash payment");
-    new Thread(new Runnable() {
-         void run() {
-            dialog.show();
-        }
-    }).start();
-}
+//if(isCash) {
+//     JOptionPane pane = new JOptionPane();
+//     pane.setMessage(FontText);
+//     pane.setPreferredSize( new Dimension(450,150));
+//     JDialog dialog = pane.createDialog("Cash payment");
+//    new Thread(new Runnable() {
+//         void run() {
+//            dialog.show();
+//        }
+//    }).start();
+//}
 
 // Return to default settings
 UIManager.put("OptionPane.buttonFont", new FontUIResource(new Font(originalFont.getName(),originalFont.getStyle(),originalFont.getSize())));
