change swing page references to Card and Key to iButton

--- a/WombatPOS/src/main/java/com/openbravo/pos/admin/PeopleView.form
+++ b/WombatPOS/src/main/java/com/openbravo/pos/admin/PeopleView.form
@@ -52,7 +52,7 @@
                   <Group type="102" alignment="0" attributes="0">
                       <Component id="jLabel5" min="-2" pref="90" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="jcard" min="-2" pref="180" max="-2" attributes="0"/>
+                      <Component id="jibutton" min="-2" pref="180" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
                       <Component id="jButton2" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
@@ -84,7 +84,7 @@
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="jLabel5" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
-                          <Component id="jcard" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
+                          <Component id="jibutton" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
@@ -114,7 +114,7 @@
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
           <Image iconType="3" name="/com/openbravo/images/fileclose.png"/>
         </Property>
-        <Property name="toolTipText" type="java.lang.String" value="Clear Key"/>
+        <Property name="toolTipText" type="java.lang.String" value="Clear iButton"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton3ActionPerformed"/>
@@ -204,7 +204,7 @@
         </Property>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="jcard">
+    <Component class="javax.swing.JTextField" name="jibutton">
       <Properties>
         <Property name="editable" type="boolean" value="false"/>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
@@ -217,7 +217,7 @@
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
           <Image iconType="3" name="/com/openbravo/images/encrypted.png"/>
         </Property>
-        <Property name="toolTipText" type="java.lang.String" value="Create Key"/>
+        <Property name="toolTipText" type="java.lang.String" value="Read iButton"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton2ActionPerformed"/>
