add ek1200 scale to peripherals

--- a/WombatPOS/src/main/java/com/openbravo/pos/config/JPanelConfigPeripheral.form
+++ b/WombatPOS/src/main/java/com/openbravo/pos/config/JPanelConfigPeripheral.form
@@ -30,7 +30,7 @@
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <Component id="jPanel13" pref="389" max="32767" attributes="0"/>
+              <Component id="jPanel13" pref="388" max="32767" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
@@ -118,7 +118,7 @@
                               <Group type="102" alignment="0" attributes="0">
                                   <Component id="jcboMachineDisplay" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace max="-2" attributes="0"/>
-                                  <Component id="m_jDisplayParams" pref="394" max="32767" attributes="0"/>
+                                  <Component id="m_jDisplayParams" max="32767" attributes="0"/>
                               </Group>
                               <Group type="102" attributes="0">
                                   <Component id="jcboMachinePrinter" min="-2" max="-2" attributes="0"/>
